--- a/views/quizzes/result.ejs
+++ b/views/quizzes/result.ejs
@@ -1,2 +1,2 @@
-    <p>La respuesta <strong><%= respuesta %></strong> es <%= result %>.</p>
-    <p><a href="/question?answer=<%= respuesta %>"> Inténtelo otra vez</a></p>
+    <p>La respuesta <strong><%= answer %></strong> es <%= result %>.</p>
+    <p><a href="/question?answer=<%= answer %>"> Inténtelo otra vez</a></p>
