--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -7,3 +7,8 @@
   </tr>
   <% } %>
 </table>
+<form method="get" action="/quizzes">
+  Palabra a buscar:
+    <input type="text" name="search" value="">
+    <input type="submit" value="Buscar">
+  </form>
