--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -7,8 +7,9 @@
   </tr>
   <% } %>
 </table>
-<form method="get" action="/quizzes">
+<form method="get" class="derecha" action="/quizzes">
   Palabra a buscar:
     <input type="text" name="search" value="">
     <input type="submit" value="Buscar">
   </form>
+  <a href="/quizzes/new"><button type="button">Crear pregunta</button></a>
