--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,7 @@ body                 { font: 16px Georgia, serif;
                         background: #eee;
                       }
 
+.derecha             { float: right;}
 a                    { color: #00B7FF; }
 
 
