--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,7 @@
       <nav class="main" role="navigation">
         <a href="/">Inicio</a>
         <a href="/quizzes">Preguntas</a>
+        <a href="/quizzes/author">Autor</a>
       </nav>
       <section>
       <% if (messages.info) { %>
