--- a/views/quizzes/edit.ejs
+++ b/views/quizzes/edit.ejs
@@ -7,6 +7,11 @@
   <label for="resp">Respuesta:</label>
     <input type="text" id="resp" name="answer" value="<%= quiz.answer %>"
       placeholder="Respuesta" />
+  <label for="tem">Temática</label>
+        <select name="tematica">
+            <option>geografia</option>
+            <option>tecnología</option>
+            <option>ocio</option></select>
     <a href="/quizzes"><button type="button">Cancelar</button></a>
 
     <input type="submit" value="Salvar">
