--- a/views/quizzes/new.ejs
+++ b/views/quizzes/new.ejs
@@ -7,6 +7,12 @@
   <label for="resp">Respuesta:</label>
     <input type="text" id="resp" name="answer" value=""
       placeholder="Respuesta" />
+  <label for="tem">Temática</label>
+      <select name="tematica">
+        <option></option>
+        <option>geografia</option>
+        <option>tecnología</option>
+        <option>ocio</option></select>
     <a href="/quizzes"><button type="button">Cancelar</button></a>
 
     <input type="submit" value="Salvar">
