--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,3 +1,5 @@
+<p> <strong><%= tematica %></strong></p>
+<br>
     <form method="get" action="/quizzes/<%= quiz.id %>/check">
       Pregunta:<%= quiz.question %> <p>
         <input type="text" name="answer" value="<%= answer %>" placeholder="Responda aquí">
