--- a/views/quizzes/edit.ejs
+++ b/views/quizzes/edit.ejs
@@ -1,20 +1,7 @@
-<p>Modificar pregunta</p>
-<p>
+<p><strong>MODIFICAR PREGUNTA</strong></p>
+<br>
 <form method="post" action="/quizzes/<%= quiz.id %>?_method=PUT">
-  <label for="preg">Pregunta:</label>
-    <input type="text" id="preg" name="question" value="<%= quiz.question %>"
-    placeholder="Pregunta" />
-  <label for="resp">Respuesta:</label>
-    <input type="text" id="resp" name="answer" value="<%= quiz.answer %>"
-      placeholder="Respuesta" />
-  <label for="tem">Temática</label>
-        <select name="tematica">
-            <option>geografia</option>
-            <option>tecnología</option>
-            <option>ocio</option></select>
-    <a href="/quizzes"><button type="button">Cancelar</button></a>
 
-    <input type="submit" value="Salvar">
+  <% include _form.ejs %>
 
   </form>
-</p>
