--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -4,4 +4,14 @@
       Pregunta:<%= quiz.question %> <p>
         <input type="text" name="answer" value="<%= answer %>" placeholder="Responda aquí">
         <input type="submit" value="Comprobar">
-      </form>
+      </p>
+    </form>
+  </p>
+  <p><a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo Comentario</button></a>
+  </p>
+  <p><strong>Comentarios</strong></p>
+  <ul>
+    <% for (var i in quiz.Comments) { %>
+      <li><%= quiz.Comments[i].text %> </li>
+      <% } %>
+    </ul>
