--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,7 @@ body                 { font: 16px Georgia, serif;
                         color: black;
                         background: #eee;
                       }
+.right               {float: right;}
 
 .derecha             { float: right;}
 a                    { color: #00B7FF; }
