--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -5,6 +5,7 @@
     <td>
       <a href='/quizzes/<%= quizzes[i].id %>'><%= quizzes[i].question %></a>
     </td>
+    <% if (session.user) { %>
     <td>
       <a href='/quizzes/<%= quizzes[i].id %>/edit'><button>Editar</button></a>
     </td>
@@ -13,6 +14,7 @@
         onClick="return confirm('Borrar: <%= quizzes[i].question %>?');">
         <button>Borrar</button></a>
     </td>
+    <% } %>
   </tr>
   <% } %>
 </table>
@@ -33,5 +35,6 @@
     <input type="text" name="search" value="">
     <input type="submit" value="Buscar">
   </form>
-
+  <% if (session.user) { %>
   <a href="/quizzes/new"><button type="button">Crear pregunta</button></a>
+  <% } %>
