--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,6 +7,7 @@
         <a href="/users/<%= users[i].id %>" ><%= users[i].username %></a>
         <%= users[i].isAdmin ? "(admin)" : "" %>
       </td>
+      <% if (session.user) { %>
         <td>
             <a href="/users/<%= users[i].id %>/edit"><button>editar</button></a>
         </td>
@@ -18,5 +19,8 @@
         </td>
       <% } %>
     </tr>
+    <% }; %>
 </table>
+  <% if (session.user) { %>
 <a href="/users/new"><button type="button">Crear usuario</button></a>
+  <% } %>
