--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,14 +8,18 @@
         <%= users[i].isAdmin ? "(admin)" : "" %>
       </td>
       <% if (session.user) { %>
-        <td>
-            <a href="/users/<%= users[i].id %>/edit"><button>editar</button></a>
+       <td>
+        <% if (session.user.isAdmin || session.user.id === users[i].id) { %>
+            <a href="/users/<%= users[i].id %>/edit"><button>Editar</button></a>
+        <% } %>
         </td>
         <td>
+          <% if (session.user.isAdmin && session.user.id !== users[i].id) { %>
             <a href="/users/<%= users[i].id %>?_method=DELETE"
                onClick="return confirm('Borrar cuenta: <%= users[i].username %>');">
                <button>borrar</button>
             </a>
+          <% } %>
         </td>
       <% } %>
     </tr>
