--- a/views/quizzes/_form.ejs
+++ b/views/quizzes/_form.ejs
@@ -3,7 +3,11 @@
   placeholder="Pregunta" />
 <label for="resp">Respuesta:</label>
   <input type="text" id="resp" name="answer" value="<%= quiz.answer %>"
-    placeholder="Respuesta" />
+    placeholder="Respuesta" /><br>
+
+    <label for="img">Image:</label>
+	<input type="file" id="img" accept="image/*" name="image" /> <p>
+
 <label for="tem">Temática</label>
     <select name="tematica">
       <option></option>
