--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,7 +1,15 @@
 <p> <strong><%= tematica %></strong></p>
-<br>
+<br><p>
     <form method="get" action="/quizzes/<%= quiz.id %>/check">
-      Pregunta:<%= quiz.question %> <p>
+      Pregunta:<%= quiz.question %>
+    </p>
+      <% if (quiz.Attachment) { %>
+        <img src="<%= quiz.Attachment.url %>"  />
+      <% } else { %>
+      <img src="/images/question.png" width="50px" />
+      <% } %>
+
+      <p>
         <input type="text" name="answer" value="<%= answer %>" placeholder="Responda aquí">
         <input type="submit" value="Comprobar">
       </p>
@@ -18,7 +26,7 @@
        if (comment.accepted) { %>
 
          <li> <%= comment.text %> </li>
-         <% } else if (session.user && 
+         <% } else if (session.user &&
          (session.user.isAdmin || (quiz.AuthorId === session.user.id))) { %>
            <li> <%= comment.text %> </li>
            <a href="/quizzes/<%= quiz.id %>/comments/<%= comment.id %>/accept?_method=PUT">
