Autores de comentarios

--- a/views/quizzes/_form.ejs
+++ b/views/quizzes/_form.ejs
@@ -12,7 +12,7 @@
     <select name="tematica">
       <option></option>
       <option>geografia</option>
-      <option>tecnología</option>
+      <option>tecnologia</option>
       <option>ocio</option></select>
   <a href="/quizzes"><button type="button">Cancelar</button></a>
 
