--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,7 @@
          <% } else { %>
              <%= session.user.username %>
              <a href="/users/<%= session.user.id %>">Perfil</a>
+             <a href="/quizzes/misQuizzes">Mis Preguntas</a>
              <a href="/session?_method=DELETE">Logout</a>
          <% } %>
        </div>
